<resources>
    <string name="app_name">MachineElements</string>
    <string name="title_activity_main">Elementos de Maquinas</string>
    <string name="title_config">Configuracion</string>

    <string name="navigation_drawer_open">Abrir Navegacion drawer</string>
    <string name="navigation_drawer_close">Cerrar Navegacion drawer</string>

    <string name="action_settings">Configuracion</string>
    <string name="resp_incorrect">Respuesta Incorrecta</string>

    <!-- activity main drawer -->
    <string name="item_drawer1">Perfil</string>
    <string name="item_drawer2">Configuracion</string>
    <string name="item_drawer3">Sugerir Preg/Resp</string>
    <string name="item_drawer4">Calificar Preg/Resp</string>
    <string name="item_drawer5">Comunicate</string>
    <string name="item_drawer51">Compartir</string>
    <string name="item_drawer52">Sugerencias</string>

    <!-- Descripcion de las imagenes del ventana principal -->
    <string name="img1">Descripcion</string>
    <string name="img2">Descripcion</string>
    <string name="img3">Descripcion</string>
    <string name="img4">Descripcion</string>
    <string name="img5">Descripcion</string>
    <string name="img6">Descripcion</string>
    <string name="img7">Descripcion</string>
    <string name="img8">Descripcion</string>
    <string name="img9">Descripcion</string>
    <string name="img10">Descripcion</string>
    <string name="img11">Descripcion</string>
    <string name="img12">Descripcion</string>

    CalificarActivityicar-->
    <string name="img">descripcion de la imagen</string>
    <string name="title_calificar">Calificar Preg/Resp</string>
    <string name="opc_calificar">Opciones</string>
    <string name="boton_calificar">No deberia aprobarse</string>

    <!--Sugerir-->
    <string name="title_sugerir">Sugerir Pregunta</string>
    <string name="sugerir">Siguiente</string>

    <!--General-->
    <string name="texto_pregunta">PREGUNTA</string>
    <string name="texto_respuesta">RESPUESTA</string>
    <string name="hint_pregunta">Pregunta</string>
    <string name="resp">Respuesta Correcta</string>
    <string name="resp2">Respuesta Incorrecta</string>
    <string name="resp3">Respuesta Incorrecta</string>
    <string name="resp4">Respuesta Incorrecta</string>
    <string name="btn_actividad">Actividad</string>
    <string name="title_activity_calificar">CalificarActivity</string>
    <string name="title_activity_principal">PrincipalActivity</string>

</resources>
