<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ProgressBar
                    android:id="@+id/progressBar2"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="20dp" />

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/progressBar2"
                    android:layout_marginStart="22dp"
                    android:layout_marginTop="14dp"
                    android:text="@string/texto_pregunta" />

                <EditText
                    android:id="@+id/editText1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/textView1"
                    android:layout_below="@+id/textView1"
                    android:layout_marginStart="18dp"
                    android:layout_marginTop="18dp"
                    android:ems="10"
                    android:hint="@string/hint_pregunta"
                    android:inputType="textMultiLine" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/textView1"
                    android:layout_below="@+id/editText1"
                    android:layout_marginTop="45dp"
                    android:text="@string/texto_respuesta" />

                <FrameLayout
                    android:id="@+id/frame1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textView2"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="25dp">

                </FrameLayout>

                <Button
                    android:id="@+id/btnCalificar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentStart="true"
                    android:background="@color/botonPrymary"
                    android:text="@string/boton_calificar"
                    android:textColor="@color/textBotonPrymary"
                    android:textSize="24sp"
                    tools:text="aceptar" />

                <EditText
                    android:id="@+id/editText13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/btnCalificar"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="25dp"
                    android:ems="10"
                    android:hint="@string/resp4"
                    android:inputType="text" />

                <EditText
                    android:id="@+id/editText12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/editText13"
                    android:layout_below="@+id/editText11"
                    android:layout_marginTop="15dp"
                    android:ems="10"
                    android:hint="@string/resp3"
                    android:inputType="text" />

                <EditText
                    android:id="@+id/editText11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/editText13"
                    android:layout_below="@+id/editText10"
                    android:layout_marginTop="19dp"
                    android:ems="10"
                    android:hint="@string/resp2"
                    android:inputType="text" />

                <EditText
                    android:id="@+id/editText10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/editText11"
                    android:layout_below="@+id/frame1"
                    android:ems="10"
                    android:hint="@string/resp"
                    android:inputType="text"
                    android:textColorHint="@color/colorPrimary" />
            </RelativeLayout>

        </LinearLayout>

</LinearLayout>