<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="false"
    android:layout_centerInParent="true"
    android:layout_centerVertical="true"
    android:layout_gravity="center"
    tools:context="drawable.MainFragment"    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorOne"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:baselineAligned="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorThree"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingLeft="5dp"
                android:paddingRight="5dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@color/colorFive"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <ImageButton
                        android:id="@+id/imageView1"
                        android:contentDescription="@string/img1"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:background="@mipmap/engranes" />

                    <TextView
                        android:id="@+id/textView1"
                        android:layout_width="wrap_content"
                        android:layout_height="20dp"
                        android:textColor="@color/colorTextLight"
                        android:background="@color/colorPrimaryDark"
                        android:textAlignment="center"
                        tools:text="@string/app_name" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@color/colorFive"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <ImageButton
                        android:id="@+id/imageView2"
                        android:contentDescription="@string/img2"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:background="@mipmap/engranes" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.AppCompat.Button"
                        android:textColor="@color/colorTextLight"
                        tools:text="Tema 2" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:baselineAligned="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorThree"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingLeft="5dp"
                android:paddingRight="5dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@color/colorFive"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <ImageButton
                        android:id="@+id/imageView3"
                        android:contentDescription="@string/img3"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:background="@mipmap/engranes" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.AppCompat.Button"
                        android:textColor="@color/colorTextLight"
                        tools:text="Tema 3 " />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@color/colorFive"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <ImageButton
                        android:id="@+id/imageView4"
                        android:contentDescription="@string/img4"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:background="@mipmap/engranes" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.AppCompat.Button"
                        android:textColor="@color/colorTextLight"
                        tools:text="Tema 4" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:baselineAligned="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorThree"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingLeft="5dp"
                android:paddingRight="5dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@color/colorFive"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <ImageButton
                        android:id="@+id/imageView5"
                        android:contentDescription="@string/img5"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:background="@mipmap/engranes"
                        android:textColor="@color/colorTextLight" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.AppCompat.Button"
                        android:textColor="@color/colorTextLight"
                        tools:text="Tema 5 " />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@color/colorFive"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <ImageButton
                        android:id="@+id/imageView6"
                        android:contentDescription="@string/img6"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:background="@mipmap/engranes" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.AppCompat.Button"
                        android:textColor="@color/colorTextLight"
                        tools:text="Tema 6" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:baselineAligned="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorThree"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingLeft="5dp"
                android:paddingRight="5dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@color/colorFive"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <ImageButton
                        android:id="@+id/imageView7"
                        android:contentDescription="@string/img7"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:background="@mipmap/engranes" />

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.AppCompat.Button"
                        android:textColor="@color/colorTextLight"
                        tools:text="Tema 7 " />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@color/colorFive"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <ImageButton
                        android:id="@+id/imageView8"
                        android:contentDescription="@string/img8"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:background="@mipmap/engranes" />

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.AppCompat.Button"
                        tools:text="Tema 8" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:baselineAligned="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorThree"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingLeft="5dp"
                android:paddingRight="5dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@color/colorFive"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <ImageButton
                        android:id="@+id/imageView9"
                        android:contentDescription="@string/img9"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:background="@mipmap/engranes" />

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.AppCompat.Button"
                        android:textColor="@color/colorTextLight"
                        tools:text="Tema 9 " />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@color/colorFive"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <ImageButton
                        android:id="@+id/imageView10"
                        android:contentDescription="@string/img10"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:background="@mipmap/engranes" />

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.AppCompat.Button"
                        android:textColor="@color/colorTextLight"
                        tools:text="Tema 10" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:baselineAligned="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorThree"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingLeft="5dp"
                android:paddingRight="5dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@color/colorFive"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <ImageButton
                        android:id="@+id/imageView11"
                        android:contentDescription="@string/img11"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:background="@mipmap/engranes" />

                    <TextView
                        android:id="@+id/textView11"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.AppCompat.Button"
                        android:textColor="@color/colorTextLight"
                        tools:text="Tema 11 " />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@color/colorFive"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <ImageButton
                        android:id="@+id/imageView12"
                        android:contentDescription="@string/img12"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:background="@mipmap/engranes" />

                    <TextView
                        android:id="@+id/textView12"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.AppCompat.Button"
                        android:textColor="@color/colorTextLight"
                        tools:text="Tema 12" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</FrameLayout>
